# leanVM-b

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyrightconfig.json  ring-switching-generalized.tex  snark_lib.py  zkDSL.md
.cargo/: config.toml
.github/workflows/: pcs.yml  pdf.yml
crates/fiat_shamir/: Cargo.toml
crates/fiat_shamir/src/: lib.rs  sponge.rs  transcript.rs
crates/flock/: Cargo.toml
crates/flock/src/: binary_witness.rs  blake3.rs  blake3_witness.rs  lib.rs  lincheck.rs  proof.rs  r1cs.rs  sha256.rs  test_rng.rs  verifier.rs  zerocheck.rs
crates/flock/src/zerocheck/: multilinear.rs  univariate_skip.rs  univariate_skip_optimized.rs
crates/flock/tests/: blake3_batch.rs  sha2_batch.rs
crates/lean_compiler/: Cargo.toml  zkDSL.md
crates/lean_compiler/src/: ast.rs  ir.rs  lib.rs  lower.rs  parser.rs
crates/lean_compiler/tests/: assert_ne.rs  const_placeholder.rs  disassemble.rs  ext_arith.rs  field_div.rs  field_towers.rs  heap_index.rs  hint_log2_ceil.rs  inline_expr.rs  loop_carry.rs  pack64x2.rs  print_debug.rs  py_source.rs  range_check.rs  stack_buf.rs  transcript_helpers.rs
crates/lean_compiler/tests/programs/: blake3_chain.py  blake3_heap_chain.py  blake3_slices.py  conditionals.py  const_params.py  identities.py  scoping.py  sha256_chain.py  sha256_heap_chain.py  sha256_slices.py  unroll.py  wots_walk.py
crates/lean_vm/: Cargo.toml
crates/lean_vm/src/: blake3_flock.rs  constraints.rs  frac_gkr.rs  gkr.rs  leaf.rs  lib.rs  logup_star.rs  pcs.rs  sha256_flock.rs  tables.rs  transcript.rs  vmhash.rs  witness.rs
crates/lean_vm/src/cpu/: execute.rs  hints.rs  isa.rs  layout.rs  mod.rs  trace.rs
crates/pcs/: Cargo.toml
crates/pcs/src/: commit.rs  jagged.rs  lib.rs  ligerito.rs  ligerito_config.rs  ligerito_k.rs  merkle.rs  ntt.rs  pack.rs  pack_k.rs  ring_switch.rs  ring_switch_k.rs  stack_open.rs  stack_open_k.rs  tensor_algebra.rs  tensor_algebra_k.rs  test_rng.rs
crates/pcs/src/ntt/: additive_ntt_f128.rs  additive_ntt_f64.rs  inv_table.rs
crates/pcs/tests/: pcs_throughput.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: bits.rs  field.rs  lib.rs  multilinear.rs  scratch.rs  sha256.rs
crates/primitives/src/field/: gf2_128.rs  gf2_64.rs  gf2_64x3.rs  gf2_8.rs  iso_f128.rs  mod.rs  phi8.rs  phi8_tower.rs  tower_f128.rs  tower_f128_artin.rs  tower_f128_xy.rs  vpclmul.rs
crates/rec_aggregation/: Cargo.toml
crates/rec_aggregation/guests/: recursion.py  verify_recursive.py  xmss_aggregate.py
crates/rec_aggregation/src/: fibonacci.rs  lib.rs  recursion.rs  signers_cache.rs  xmss_aggregation.rs
crates/rec_aggregation/tests/: hash_chain.rs
crates/xmss/: Cargo.toml  README.md
crates/xmss/src/: gf128.rs  gf64.rs  hash.rs  lib.rs  wots.rs  xmss.rs
crates/xmss/tests/: xmss_tests.rs
misc/: doc.tex  logup-star-migration-plan.md  pcs.tex  recursion-e2e-notes.md  recursion-generic-plan.md  recursion-plan.md  transition-perf.md  transition-to-64-bits.tex
src/: blake3_flock.rs  compiler.rs  constraints.rs  cpu.rs  field.rs  gkr.rs  leaf.rs  lib.rs  main.rs  multilinear.rs  pcs.rs  tables.rs  transcript.rs  vmhash.rs  witness.rs
src/compiler/: ast.rs  ir.rs  lower.rs  mod.rs  parser.rs
src/cpu/: execute.rs  isa.rs  layout.rs  mod.rs  trace.rs
tests/: assert_ne.rs  blake3_bench.rs  ceil_log2.rs  const_placeholder.rs  disassemble.rs  field_div.rs  field_towers.rs  hash_chain.rs  hint_log2_ceil.rs  lig_ml_gen.py  ligerito_recursive.py  ligerito_verifier.py  log2_ceil.rs  matclaim_sumcheck_probe.rs  matnnz_probe.rs  py_source.rs  range_check.rs  recursion_e2e.rs  recursion_gadgets.rs  rs_eq_linearized_probe.rs  rt_merkle_loop.py  stack_array.rs  stack_buf.rs  verify_recursive.py  xmss_aggregate.py  xmss_verify.py  xmss_vm.rs  xmss_wots.py
tests/programs/: blake3_chain.py  blake3_heap_chain.py  blake3_slices.py  const_params.py  fibonacci.py  heapbuf_dyn.py  hint.py  match.py  match_range.py  nested.py  range_check.py  runtime_loop.py  wots_walk.py
xmss/: Cargo.toml  README.md
xmss/src/: gf64.rs  hash.rs  lib.rs  wots.rs
xmss/tests/: xmss_tests.rs
