[package]
name = "leanvm-b"
version.workspace = true
edition.workspace = true

[[bin]]
name = "leanvm-b"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
primitives.workspace = true
lean_vm.workspace = true
lean_compiler.workspace = true
rec_aggregation.workspace = true
clap = { version = "4", features = ["derive"] }
bincode.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

# Hand-tuned numeric kernels (flock, pcs) legitimately index by loop variable,
# take many arguments, and assert on constants; silence those style lints
# workspace-wide rather than annotating every kernel.
[workspace.lints.clippy]
needless_range_loop = "allow"
too_many_arguments = "allow"
assertions_on_constants = "allow"
explicit_counter_loop = "allow"

[workspace.dependencies]
primitives = { path = "crates/primitives" }
fiat_shamir = { path = "crates/fiat_shamir" }
pcs = { path = "crates/pcs" }
flock = { path = "crates/flock" }
lean_vm = { path = "crates/lean_vm" }
lean_compiler = { path = "crates/lean_compiler" }
rec_aggregation = { path = "crates/rec_aggregation" }
xmss = { path = "crates/xmss" }
rayon = "1.10"
blake3 = "1.5"
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = "0.9"

[profile.release]
lto = "thin"
codegen-units = 1
