[package]
name = "lean_vm"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
primitives.workspace = true
fiat_shamir.workspace = true
pcs.workspace = true
flock.workspace = true
blake3.workspace = true
rayon.workspace = true
tracing.workspace = true

[dev-dependencies]
bincode.workspace = true
