[package]
name = "primitives"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rayon.workspace = true
sha2.workspace = true
serde.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
bincode.workspace = true
