[package]
name = "rec_aggregation"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
primitives.workspace = true
pcs.workspace = true
flock.workspace = true
lean_vm.workspace = true
lean_compiler.workspace = true
xmss.workspace = true
rand.workspace = true
bincode.workspace = true
serde.workspace = true

[dev-dependencies]
blake3.workspace = true

[features]
# The n→1 recursion harness (src/recursion.rs) predates the 64-bit machine
# words; enable once the guest + hint builder are ported to `K = GF(2^64)`.
recursion = []
